@@ -89,6 +89,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5179: Fixed subprocess handle leak on failure on windows.
+
 - Issue #4308: httplib.IncompleteRead's repr doesn't include all of the data all
   ready received.
 
